--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
+    "sass": "version number(example:^5.0.0)",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scss": "sass --whatch scss -o css"
   },
   "eslintConfig": {
     "extends": [
